- (UN)BAN_USER to ban really stupid users based on their global user ID, 
  BAN_USER_LIST to show a list.
- ACCESS_LEVEL_OP/ADMIN/CHAT/PLAY/PLAY_SLIDING to control who can do which things
- /login chat command then uses the more secure hashed base logins
- new chat commands /op, /deop, /promote and /demote to change other players' access rights

  Featurelets:
- Added PLAYER_RANDOM_COLOR for lazy people who just want to have a
  color that differs from everyone else on the server.
- Configuration files get reloaded on SIGHUP
- all admin commands now also accept partial name matches, like /msg, and check for case sensitive
  matches in the screen name first, then the user name, then case insensitive matches in the two.
- --enable-krawallserver has been actually implemented now, and it enables secure logins
  to accounts local to the server and not-so-secure logins managed by authentication servers.
- A subculture list for server groups that are not managed by our main master servers
- A friends list and filter for the server browser that shows you only servers with
  your friends on them.
- The client now can handle network traffic while it is waiting for the graphics
  card to swap buffers.
- The dedicated server no longer uses a fixed delay, but a select() call (that
  returns when network data arrives) to idle. When data arrives, it does 
  the minimum amount of work before it sends out the responses, resulting in
  lower latency. It is now safe to decrease DEDICATED_FPS to 20 or 10, latency
  is no longer influenced by that setting.
- Game level lag compensation. When a command arrives from a client that is delayed,
  it is backdated to the time it was issued, provided enough "lag credit" is left.
  The client is informed of the delay so it can compensate in the future, which it does
  by forging the game timer.
- Nonnormalized axes and axes with odd turning directions are now properly supported